[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
config = {path = "../config"}
db = {path = "../db"}
tokio = { version = "1", features = [ "rt-multi-thread", "macros", "full", "tracing", "parking_lot"] }
log = "0.4"
anyhow = "1"