[package]
name = "bonerjams-cli"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
bonerjams-config = {path = "../config", version = "0.0.2"}
bonerjams-db = {path = "../db", version = "0.0.2"}
tokio = { version = "1", features = [ "rt-multi-thread", "macros", "full", "tracing", "parking_lot"] }
log = "0.4"
anyhow = "1"