[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_yaml = "0.9"
serde_json = "1"
sled = "0.34.7"
simplelog = "0.12"
log = "0.4"
anyhow = "1" 