[package]
name = "bonerjams-config"
version = "0.0.2"
edition = "2021"
authors = ["Bonedaddy"]
description = "configuration crate for bonerjams"
keywords = ["rust", "sled", "grpc"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/bonerjams-config"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_yaml = "0.9"
serde_json = "1"
sled = "0.34.7"
simplelog = "0.12"
log = "0.4"
anyhow = "1" 