[package]
name = "db"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
sled = "0.34.7"
anyhow = "1"
log = "0.4"
config = {path = "../config"}
base64 = "0.13"
tokio = { version = "1", features = [ "rt-multi-thread", "macros", "full", "tracing", "parking_lot", "net"] }
tokio-stream = { version = "0.1", features = [ "net" ] }
tonic = {version = "0.8", features = ["tls", "gzip", "tls-roots"]}
tonic-rpc = {version = "0.2", features = ["json", "cbor"]}
tonic-health = {version = "0.7.1", features = ["transport"]}
warp = "0.3"
http = "0.2"
tower = "0.4"
rcgen = {version = "0.10.0", features = ["x509-parser"]}
chrono = "0.4"
ring = "0.16"
pem = "1.0"
openssl = "0.10"
rustls-pemfile = "*"
tokio-rustls = "*"
hyper-rustls = { version = "0.23", features = ["http2"] }
hyper = { version = "0.14", features = ["full"] }
tower-http = { version = "0.3", features = ["add-extension", "util"] }
h2 = "0.3"
http-body = "0.4.2"
tonic-openssl = "0.2.0"
hyper-openssl = "0.9.2"