[package]
name = "bonerjams-db"
version = "0.0.2"
edition = "2021"
authors = ["Bonedaddy"]
description = "sled database client library with typed apis and a grpc key-value server"
keywords = ["rust", "sled", "grpc"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/bonerjams-db"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
sled = "0.34.7"
anyhow = "1"
log = "0.4"
bonerjams-config = {path = "../config", version = "0.0.2"}
base64 = "0.13"
tokio = { version = "1", features = [ "rt-multi-thread", "macros", "full", "tracing", "parking_lot", "net"] }
tokio-stream = { version = "0.1", features = [ "net" ] }
tonic = {version = "0.8", features = ["tls", "gzip", "tls-roots", "channel"]}
tonic-rpc = {version = "0.2", features = ["json", "cbor"]}
tonic-health = {version = "0.7.1", features = ["transport"]}
http = "0.2"
tower = "0.4"
rcgen = {version = "0.10.0", features = ["x509-parser"]}
chrono = "0.4"
openssl = "0.10"
hyper = { version = "0.14", features = ["full"] }
tower-http = { version = "0.3", features = ["full", "add-extension", "util"] }
hyper-openssl = "0.9.2"
tokio-openssl = "0.6"
async-stream = "0.3"
futures = { version = "0.3", default-features = false }