[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum-jrpc = "0.3.0-rc.1"
thiserror = "1"
tokio = { version = "1", features = ["full"] } 
axum = "0.6.0-rc.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = {version = "1", features = ["derive"]}
log = "0.4"
serde_json = "1"
db = {path = "../db"}
config = {path = "../config"}
reqwest = {version = "0.11", features = ["blocking"]}
tower = "0.4"