[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "rt-multi-thread", "macros", "full", "tracing", "parking_lot"] }
tokio-stream = { version = "0.1", features = [ "net" ] }
tonic = "0.8"
tonic-rpc = {version = "0.2", features = ["json", "cbor"]}
serde = {version = "1.0", features = ["derive"]}
db = {path = "../db"}
config = {path = "../config"}
anyhow = "1"
base64 = "0.13"
zmq = {version ="0.9.2", features = ["vendored"]}
sled = "0.34.7"
log = "0.4"
serde_cbor = "0.11.2"
tonic-health = {version = "0.7.1", features = ["transport"]}
http = "0.2"
tower = "0.4"